2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(SOURCES): Add aws-services-files.adb.

	* aws-services-files.ads, aws-services-files.adb:
	Initial revision.

	* aws-mime.ads, aws-mime.adb:
	Fix casing of GZip and GTar.
	
2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-pop.ads, aws-pop.adb:
	(Get_Header): New function.
	(For_Every_Message_Header): New procedure.
	This will be needed to implement the Web Mail callback.

	* aws-resources-files.adb:
	(File_Size): Catch only OS_Lib.No_Such_File.
	(File_Timestamp): Idem.
	(Is_Regular_File): Remove exception handler.

	* aws-server-hotplug.ads, aws-server-hotplug.adb:
	Reformat code.
	Update copyright header.
	
	* aws-hotplug.ads, aws-hotplug.adb:
	Reformat code.
	Update copyright header.

	* aws-server-protocol_handler.adb:
	(Get_Message_Header): Uses AWS.Status.Is_Supported service,
	 cleaner implementation.
	
2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-server-protocol_handler.adb:
	(Support_Compressed): New variable.
	(Get_Message_Header): Checks the Accept-Encoding header, set
	 Support_Compressed accordingly.
	(Send_Data): Set the support compressed flag for the file.

2003-12-02  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-resources-embedded.adb:
	(Node): Add field Mode.
	(Read_Uncompressed): New routine.
	(Read) [Z_File_Tagged]: New routine.
	(Close) [Z_File_Tagged]: New routine.
	(Support_Compressed) [Z_File_Tagged]: New routine.

	* aws-resources-embedded.ads:
	(Data_Mode): New type.
	(Register): Add new parameter Mode to specify if the resource is
	 compressed or not.
	(Z_File_Tagged): New type.
	(Read) [Z_File_Tagged]: New routine.
	(Close) [Z_File_Tagged]: New routine.
	(Support_Compressed) [Z_File_Tagged]: New routine.

	* aws-resources-streams-memory-zlib.ads,
	  aws-resources-streams-memory-zlib.adb:
	Undo previous change.

	* aws-resources-streams-zlib.ads, aws-resources-streams-zlib.adb:
	Undo previous change.
	
	* aws-resources.ads, aws-resources.adb:
	Undo previous changes.